fix bug with navbar spacing

--- a/index.css
+++ b/index.css
@@ -35,6 +35,13 @@ nav .container {
 	width: auto;
 	float: left;
 }
+
+.constrain {
+	width: 100%;
+	max-width: 820px;
+	margin: 0 auto !important;
+}
+
 #navbar {
 	width: 100%;
 	padding: 0;
@@ -49,7 +56,7 @@ nav .container {
 	line-height: 80px;
 	vertical-align: middle;
 	font-weight: bold;
-	margin-right: 10%;
+	/*margin-right: 10%;*/
 }
 nav ul li {
 	display: inline;
@@ -166,11 +173,14 @@ PHONE VIEW
 	*********************/
 	nav {
 		height: 50px;
+		margin-bottom: 0;
+		padding-bottom: 0;
 	}
 	#nav-logo {
 		position: relative;
 		padding: 0px;
 		margin-top: -5px;
+		margin-left: 10px;
 		height: 30px;
 		width: auto;
 		float: left;	
@@ -180,28 +190,32 @@ PHONE VIEW
 		width: 100%;
 		margin: 0;
 		padding: 0;
-		margin-top: 5px;
+		margin-top: 3px;
 		font-family: 'Montserrat-Bold';
 	}
 	nav ul li {
-		display: inline;
+		display: block;
 		padding: 0px;
 		margin: 0;
 		line-height: 80px;
-		vertical-align: middle;
 	}
 	.navbar-default .navbar-nav>li>a {
-		border-bottom: 1px solid #0a8e84;
-		width: 100%;
+		border-bottom: 1px solid #e7e7e7;
 		margin: 0;
 	}
 	#navbar {
 		background-color: white;
+		margin-top: 0;
+		padding-top: 0;
 		width: 100%;
 		text-align: center;
 	}
+	.nav navbar-nav {
+		margin-top: 0;
+		padding-top: 0;
+	}
 	#collapse-btn {
-		margin-right: 20px;
+		margin-right: 30px;
 	}
 	/*********************
 	JUMBOTRON ELEMENTS
@@ -278,6 +292,9 @@ TRANSITION VIEW
 		font-weight: bold;
 		padding: 0;
 		margin-right: 0;
+	}
+	.constrain {
+	max-width: 640px;
 	}
 	button#learnMore {
 		margin-top: 0;
